[package]
name = "solana-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.17"
spl-token = "4.0"
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
bs58 = "0.5"